...
    "body": "You will no longer be able to access your funds or your Recovery Phrase from this device. There is no way to recover your Recovery Phrase if you haven't written it down.",
    "resetNow": "Reset Now"
  },
  "promptConfirmRevokeModal": {
    "header": "Are you sure you want to disconnect your phone number?",
    "body": "Once disconnected, you will not be able to reconnect your phone number to this wallet again.",
    "revoke": "Disconnect"
  },
  "testFaqLink": "{{appName}} FAQ",
  "termsOfServiceLink": "Terms of Service",
  "privacyPolicy": "Privacy Policy",
  "editProfile": "Edit Profile",
  "confirmNumber": "Connect phone number",
...
  "maxEscrowTransferExceeded": "The maximum amount transferrable to users without a connected number is {{symbol}}{{maxAmount}}.",
  "invalidAmount": "Invalid amount",
  "invalidCode": "Invalid Code",
  "confirm": "Confirm",
  "readCodesAuto": "Read Codes Automatically",
  "enterManually": "Enter Manually",
  "incorrectPin": "Incorrect PIN",
  "pinInputCanceled": "The PIN is necessary. Please try again.",
  "setPinFailed": "Failed to set PIN",
  "optIn": "Opt In",
  "invalidInvite": "Invalid Invitation Code",
  "inviteFriends": "Invite Friends",
  "account": "Account",
...
  "addressValidationFullPoorlyFormatted": "Account Addresses begin with \"0x\", contain only numbers and letters, and are 42 characters long. Press the link below for help",
  "addressValidationPartialPoorlyFormatted": "Account Addresses only contain numbers and letters, please provide the last 4 digits. Press the link below for help",
  "addressValidationFullOwnAddress": "Please enter your contact's Account Address, not your own. Press the link below for help",
  "addressValidationPartialOwnAddress": "Please enter the last 4 digits of your contact's Account Address, not your own. Press the link below for help",
  "providerRateFetchFailed": "Could not fetch provider rate. You can continue without a prefilled rate.",
  "helpFindAccount": "Help your contact find their Account Address",
  "close": "Close",
  "home": "Wallet",
  "accountKey": "Recovery Phrase",
  "addAndWithdraw": "Add & Withdraw",
  "settings": "Settings",
  "help": "Help",
  "dismiss": "Dismiss",
  "review": "Review",
  "insufficientBalance": "Your balance is too low to make this transaction",
  "amount": "Amount",
  "currentBalance": "Current Balance (cUSD)",
...
  },
  "fullName": "Name",
  "fullNamePlaceholder": "First & Last name",
  "importIt": "Restore Wallet",
  "important": "Important",
  "confirmPin": {
    "title": "Enter PIN"
  },
  "goToSystemSecuritySettingsActionLabel": "Go to security",
  "enableSystemScreenLockFailedMessage": "Failed to enable screen lock",
  "initKeystoreFailureMessage": "Failed to init keystore",
  "pinLostForeverMessage": "You removed the screen lock, the PIN is lost",
  "importContactsPermission": {
...
  "createAccount": "Create Account",
  "restoreAccount": "Import My Account",
  "registrationSteps": "Step {{step}} of {{totalSteps}}",
  "selectCountryCode": "Select Country Code",
  "pincodeSet": {
    "create": "Create a PIN",
    "createNew": "Create a new PIN",
    "verify": "Enter your PIN again to confirm",
    "changePIN": "Change PIN",
    "pinsDontMatch": "The PINs didn't match",
    "invalidPin": "Please use a stronger PIN"
  },
  "inviteCode": {
...
    "signTransaction": "Send funds",
    "sendTransaction": "Send funds",
    "accounts": "Read Address",
    "decrypt": "Decrypt Data",
    "computeSharedSecret": "Generate a secret"
  },
  "tapToDisconnect": "Tap to Disconnect",
  "sessionsTitle": "Connected Dapps",
  "sessionsSubTitle": "The following dapps are connected to {{appName}}. You can connect to more dapps by scanning their QR code.",
  "disconnect": "Disconnect",
  "disconnectTitle": "Disconnect {{dappName}}?",
  "disconnectBody": "Are you sure you want to disconnect from {{dappName}}?",
  "connectionSuccess": "Success! Please go back to {{dappName}} to continue",
...
  "dappsScreenBottomSheet": {
    "title": "{{dappName}} is an external application",
    "message": "You are about to open an application not operated by {{appName}}.\n\n{{appName}} makes no representations about this application. Use at your own risk.",
    "button": "Go to {{dappName}}"
  },
  "recentlyUsedDapps": "Recently Used Dapps",
  "allDapps": "All Dapps",
  "rewards": "Rewards",
  "supercharge": "Supercharge",
  "others": "Others",
  "nomSpaceRecipient": "Nomspace: {{name}}",
  "lastDay": "Last 24 hrs",
  "merchant": "Merchant Payment",
...
