...
          showChevron
        />
        {getKeylessBackupItem()}
        <SettingsItemTextValue
          title={t('changePin')}
          onPress={goToChangePin}
          testID="ChangePIN"
          showChevron
        />
        {supportedBiometryType && (
          <SettingsItemSwitch
            title={t('useBiometryType', {
              biometryType: t(`biometryType.${supportedBiometryType}`),
...
          />
        )}
        <SettingsItemSwitch
          title={t('requirePinOnAppOpen')}
          value={requirePinOnAppOpen}
          onValueChange={handleRequirePinToggle}
          testID="requirePinOnAppOpenToggle"
        />
        <SettingsItemSwitch
          title={t('shareAnalytics')}
          value={analyticsEnabled}
          onValueChange={handleToggleAnalytics}
          details={t('shareAnalytics_detail')}
...
